# agent-compose

./: .env.example  AGENTS.md  Cargo.toml  README.md  agent-compose.yaml  datamodels.yaml
.agent-compose/: healthEcon.state.json
.github/workflows/: agent-compose.yml
src/: config.rs  io.rs  loader.rs  main.rs  resolver.rs  runtime.rs  schema.rs  server.rs
src/config/: constants.rs  types.rs  validate.rs
src/loader/: env.rs  paths.rs
src/provider/: mod.rs  rig.rs
src/runtime/: constants.rs  context.rs  events.rs  execution.rs  form.rs  steps.rs
src/schema/: contract.rs
src/terminal/: cli.rs  ui.rs
src/terminal/cli/: args.rs  chains.rs  interactive.rs  remote.rs  serve_ctl.rs
src/terminal/ui/: app_history.rs  app_runtime.rs  app_session.rs  app_submission.rs  constants.rs  formatting.rs  input.rs  render.rs  types.rs
src/terminal/ui/render/: format.rs  layout.rs  panels.rs  widgets.rs  wrapping.rs
