[package]
name = "agent-compose"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
futures = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
dialoguer = "0.11"
ratatui = "0.29"
regex = "1.12"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rig-core = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
unicode-width = "0.2"
